k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: xxx
    http:
      paths:
      - path: /serviceA(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-a-service
            port:
              number: 80
      - path: /serviceB(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-b-service
            port:
              number: 80
